update и list перелопачены
